# aip-moca-integration

./: .env.example  .gitignore  CONTRIBUTING.md  MCP_INTEGRATION.md  README.md  aip-demo.tape  cli-roadmap.md  docs.md  eslint.config.mjs  frontend.md  login-test.tape  netlify.toml  next.config.js  package-lock.json  package.json  phase3-roadmap.md  phase4-roadmap.md  react-app.js  supabase-schema.md  tailwind.config.js  tsconfig.json  vitest.config.ts
aip-demo-prompts/: whitepaper-navigator.md
moca-contracts/: .env.example  .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json
programs/aip-escrow/programs/aip-registry/: Cargo.toml
programs/aip-escrow/programs/aip-registry/src/: lib.rs
scripts/: audit-onchain-agents.ts  check-auto-hustler.ts  check-thread-forge.ts  deactivate-hosted-agent.ts  demo.ts  e2e-cli-register-test.ts  fix-thread-forge.ts  force-close-legacy.ts  inspect-airdrop-hunter.ts  inspect-all-pricing.ts  inspect-hosted-agents.ts  migrate-onchain-dids.ts  rescue-orphan-agent.ts  reseed-demo-agents.ts  run-demo-agents.ts  schema.sql  setup-db.ts  update-demo-prompts.ts  verify-airkit.ts  verify-credential.ts  verify-escrow.ts  verify-resolver.ts
sql/: 2026-05-20-add-mcp-servers-column.sql  budget-atomic-functions.sql  phase7-migration.sql
src/: instrumentation.ts  middleware.ts
standards/: SIMD-XXXX-onchain-agent-identity.md  did-aip-method-spec.md
tests/: artifact-parser.test.ts  escrow-program.test.ts  mcp-bridge.test.ts  mcp-converters.test.ts  mcp-tool-cache.test.ts  registry-program.test.ts  usdc.test.ts
(+191 files in other folders)
