[package]
name = "aip-registry"
version = "0.1.0"
description = "AIP Agent Registry — On-chain agent card storage and discovery"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aip_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.30.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
